--- a/pages/exercicio2.html
+++ b/pages/exercicio2.html
@@ -7,6 +7,7 @@
     <title>Exercício 2</title>
 </head>
 <body>
+    <p>Imagem do filme transformers</p>
     <a href="https://pt.wikipedia.org/wiki/Transformers" target="_blank">
         <img src="../img/transformers.jpeg" alt="Transformers" style="width:200px; height:150px">
     </a>
